# bitmenu

./: .gitignore  .pre-commit-config.yaml  README.md  ci-pytest.ini  docker-compose.yml  manage.py  production.yml  pylintrc  pyproject.toml  pytest.ini
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: black.yaml  ci.yaml  integration_tests.yaml  unit_tests.yaml
apps/core/: __init__.py
apps/menus/: __init__.py  models.py
apps/menus/application/: urls.py  views.py
apps/menus/migrations/: 0001_initial.py
apps/users/: __init__.py  admin.py  models.py
apps/users/domain/: repositories.py  value_objects.py
apps/users/infrastructure/: metadata.py  models.py
apps/users/infrastructure/services/: users.py
apps/users/migrations/: 0001_initial.py  0002_user_company_user_created_at_user_phone_number_and_more.py  0003_membership_team_membership_team_membership_user.py  0004_client_domain.py  0005_user_first_name_user_last_name_alter_user_name.py  0006_user_external_id.py
common/models/fields/: __init__.py  base.py  enum.py
compose/local/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: __init__.py  celery_app.py  credentials_base.py  public_urls.py  settings_base.py  tenant_urls.py  wsgi.py
config/development/: __init__.py  credentials.py  settings.py
config/docker/: __init__.py  credentials.py
config/testing/: __init__.py  credentials.py  settings.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
domain/base/: repository.py  value_objects.py
frontend/: package.json
frontend/components/: register.vue
frontend/pages/: register.vue
locale/en_US/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
rest/: serializers.py  utils.py
rest/common/: types.py
rest/views/: __init__.py  base.py  resource.py
